--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url(https://static.vecteezy.com/system/resources/thumbnails/003/322/066/small/pastel-colour-shape-abstract-background-with-blue-green-yellow-free-vector.jpg);
+    background-image: url(background_image.jpg);
     background-size: cover;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: transparent;
